--- a/3.html
+++ b/3.html
@@ -10,7 +10,7 @@
         <p>Hello, world! This is <a href="https://ko.wikipedia.org/wiki/HTML" target="_blank" title="HTML wiki">HTML</a> practice.</p>
         <p><strong>creating <u>web</u> pages</strong></p>
 
-        <img src="skiing.jpg" width="200" height="200">
+        <img src="walking.jpg" width="200" height="200">
         <p style="margin-top:100px">My name is Seong Min.</p>
         <ol>
             <li><a href="1.html">hTML</a></li>
