--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>WEB</h1>
-        <h3>HTML이란 무엇일까?</h3>
-        <p>Hello, world! This is <a href="https://ko.wikipedia.org/wiki/HTML" target="_blank" title="HTML wiki">HTML</a> practice.</p>
+        <h1>Hong's Page!</h1>
+        <h3>Welcome</h3>
+        <p>Hello, world! This is Hong's page</p>
         <p><strong>creating <u>web</u> pages</strong></p>
 
-        <img src="skiing.jpg" width="200" height="200">
+        <img src="walking.jpg" width="200" height="200">
         <p style="margin-top:100px">My name is Seong Min.</p>
         <ol>
             <li><a href="1.html">hTML</a></li>
